--- a/src-assets/scss/_footer.scss
+++ b/src-assets/scss/_footer.scss
@@ -77,6 +77,10 @@
             opacity: 0.7;
         }
 
+        small {
+            color: $grey;
+        }
+
         .iScrollVerticalScrollbar {
             top: 2px !important;
             right: 0 !important;
