--- a/src-templates/partials/footer.html
+++ b/src-templates/partials/footer.html
@@ -3,10 +3,9 @@
     <div class="block">
         <div class="prose footer__profile">
             <div class="footer__avatar"></div>
-            <h3>I’m David Bushell</h3>
-            <p class="p--light"><a href="{{ site_url 'about' }}">I freelance</a> for small businesses, start-ups, individuals, and fellow web agencies.</p>
+            <h3><a href="{{ site_url 'about' }}">I’m David Bushell</a></h3>
+            <p class="p--light">Based in the UK, near Manchester, I freelance for small businesses, start-ups, individuals, and fellow web agencies — all over the world.</p>
         </div>
-
         {{# is "contact" }}
         <hr>
         {{/ is }}
@@ -36,7 +35,7 @@
 </footer>
 <!--/.footer-->
 
-<div class="overlay" id="overlay"></div>
+<!-- <div class="overlay" id="overlay"></div> -->
 
 {{>nav}}
 
