--- a/src-assets/scss/_form.scss
+++ b/src-assets/scss/_form.scss
@@ -39,7 +39,7 @@
 textarea.field {
   height: auto;
   max-width: none;
-  min-height: em(($unit--baseline*3) + $unit, 18);
+  min-height: em(($baseline*3) + $unit, 18);
 }
 
 .button {
@@ -55,7 +55,7 @@ textarea.field {
   border-bottom: 4px solid $dark-blue;
   box-shadow: 0 0 0 2px $beige,
               2px 2px 0 2px $green;
-  margin-bottom: 21px;
+  // margin-bottom: em($unit * 3, 18);
   text-shadow: 1px 1px rgba($dark-blue, 0.8);
   transition: box-shadow 150ms ease;
 
@@ -69,18 +69,23 @@ textarea.field {
     display: inline-block;
     margin: 0;
   }
+
+  // &:last-child {
+  //   margin-bottom: 0;
+  // }
 }
 
 label,
 .label {
   display: inline-block;
   vertical-align: middle;
-  @include font-size(18, $unit--baseline);
+  @include font-size(18, $baseline);
+  margin-bottom: em($unit, 18);
   font-weight: bold;
 }
 
 .form {
-  margin-bottom: em($unit--baseline);
+  margin-bottom: em($baseline);
 
   &:last-child {
     margin-bottom: 0;
@@ -100,7 +105,7 @@ label,
 .form__item {
   font-size: inherit;
   line-height: 0;
-  margin-bottom: em($unit--baseline);
+  margin-bottom: em($baseline);
 
   &:last-child {
     margin-bottom: 0;
@@ -139,7 +144,7 @@ label,
 
   .button {
     float: right;
-    margin-left: em($unit--gutter/2, 18);
+    margin-left: em($gutter/2, 18);
 
     height: em(42, 18);
     line-height: em(24, 18);
