--- a/src-assets/scss/_hero.scss
+++ b/src-assets/scss/_hero.scss
@@ -1,4 +1,79 @@
 
+.outro {
+    padding: em($baseline * 3) 0;
+    background: $pink;
+    color: $white;
+}
+
+.midtro {
+    padding: em($baseline * 3) 0;
+    background: $canvas;
+}
+
+.intro {
+    z-index: -1;
+    position: relative;
+    height: 0;
+    padding-bottom: percentage(640/1440);
+    padding-bottom: calc(240px + #{percentage(400/1440)});
+    background: $green url("../img/intro__bg.jpg");
+    background-size: 100% auto;
+    background-position: 0 bottom;
+    background-repeat: no-repeat;
+    // margin-bottom: -3%;
+
+    // @include respond-min($breakpoint--hero--1)
+    // {
+    //     margin-bottom: -6%;
+    // }
+
+    // @include respond-min($breakpoint--hero--3)
+    // {
+    //     margin-bottom: -12%;
+    // }
+
+    a {
+      color: $white;
+      text-shadow: inherit;
+
+      &:focus, &:hover {
+        text-shadow: inherit;
+      }
+    }
+
+    .h1 {
+        display: none;
+    }
+
+    .hero {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+    }
+
+    .hero__title {
+      color: $white;
+      text-shadow: 2px 2px 0 rgba($green, 1),
+                   4px 4px 0 rgba($blue, 0.8);
+
+      font-weight: normal;
+
+      b {
+        letter-spacing: 0;
+      }
+    }
+
+    .hero__body {
+        padding-top: em(56);
+
+        @include respond-min($breakpoint--hero--3)
+        {
+            padding-top: em(56 * 2);
+        }
+    }
+}
+
 @include critical {
 
     .hero {
@@ -10,7 +85,7 @@
     .hero__body {
         // display: table-cell;
         // vertical-align: middle;
-        // padding-top: em($unit--baseline);
+        // padding-top: em($baseline);
         @include clearfix;
 
         // margin-top: em(-$unit);
@@ -18,17 +93,17 @@
         @include respond-min($breakpoint--hero--3)
         {
             // margin-top: 0;
-            padding-top: em($unit--baseline);
+            padding-top: em($baseline);
         }
 
         @include respond-min($breakpoint--aside + 200)
         {
-            padding-top: em($unit--baseline * 2);
+            padding-top: em($baseline * 2);
         }
     }
 
     .hero__footer {
-        margin-top: em($unit--baseline, $p);
+        margin-top: em($baseline, $p);
 
         @include respond-max($breakpoint--hero--3 - 1)
         {
@@ -37,7 +112,7 @@
 
         @include respond-min(1280)
         {
-            margin-top: em($unit--baseline * 2, $p);
+            margin-top: em($baseline * 2, $p);
         }
     }
 
@@ -75,23 +150,23 @@
             }
         }
 
-        @include respond-min-max($breakpoint--aside, $breakpoint--aside + 200)
-        {
-            span {
-                display: block;
-            }
-        }
+        // @include respond-min-max($breakpoint--aside, $breakpoint--aside + 200)
+        // {
+        //     span {
+        //         display: block;
+        //     }
+        // }
     }
 
     .hero__links {
         list-style: none;
-        margin-bottom: em($unit--baseline);
+        margin-bottom: em($baseline);
         margin-left: 0;
 
         @include respond-min($breakpoint--hero--2)
         {
             li {
-                @include font-size($p--large, $unit--baseline);
+                @include font-size($p--large, $baseline);
                 margin-bottom: em($unit * 2, $p--large);
             }
         }
