--- a/src-assets/scss/_typography-old.scss
+++ b/src-assets/scss/_typography-old.scss
@@ -7,7 +7,7 @@
         display: block;
         clear: both;
         height: em(2);
-        margin: em($unit--baseline - 1) 0;
+        margin: em($baseline - 1) 0;
         background: $colour__hairline;
         outline: none;
         border: 0;
@@ -91,12 +91,12 @@
     p, .p {
         @include font-size($p);
         margin-top: 0;
-        margin-bottom: em($unit--baseline/2, $p);
+        margin-bottom: em($baseline/2, $p);
         color: $black;
 
-        & + h1 { margin-top: em($unit--baseline * 1.5, $h1); }
-        & + h2 { margin-top: em($unit--baseline * 1.5, $h2); }
-        & + h3 { margin-top: em($unit--baseline * 1.5, $h3); }
+        & + h1 { margin-top: em($baseline * 1.5, $h1); }
+        & + h2 { margin-top: em($baseline * 1.5, $h2); }
+        & + h3 { margin-top: em($baseline * 1.5, $h3); }
 
         &:last-child { margin-bottom: 0; }
     }
@@ -104,14 +104,14 @@
 
     .p--large {
         @include font-size($p--large, $p--large + ($unit * 2));
-        margin-bottom: em($unit--baseline, $p--large);
+        margin-bottom: em($baseline, $p--large);
 
         &:last-child { margin-bottom: 0; }
     }
 
     .p--small {
         @include font-size($p--small, $unit * 3);
-        margin-bottom: em($unit--baseline/2, $p--small);
+        margin-bottom: em($baseline/2, $p--small);
 
         &:last-child { margin-bottom: 0; }
 
@@ -124,12 +124,12 @@
     ul, ol {
         padding: 0;
         margin-top: 0;
-        margin-left: em($unit--gutter);
-        margin-bottom: em($unit--baseline);
+        margin-left: em($gutter);
+        margin-bottom: em($baseline);
         list-style: disc outside;
 
         p + & {
-            margin-top: em($unit--baseline);
+            margin-top: em($baseline);
         }
 
         li {
@@ -151,7 +151,7 @@
         ul, ol {
             font-size: inherit;
             line-height: inherit;
-            margin-left: em($unit--gutter, $p);
+            margin-left: em($gutter, $p);
             margin-top: em($unit, $p);
             margin-bottom: em($unit, $p) !important;
         }
@@ -216,8 +216,8 @@
 
     .quote,
     blockquote:not([class*="quote--"]) {
-        margin: em($unit--baseline) 0;
-        padding: 0 em($unit--gutter);
+        margin: em($baseline) 0;
+        padding: 0 em($gutter);
         border-left: em(2) solid $colour__hairline;
 
         p {
@@ -235,7 +235,7 @@
 
             .p--large {
                 @include font-size($p);
-                margin-bottom: em($unit--baseline/2, $p);
+                margin-bottom: em($baseline/2, $p);
                 & + .p--small:last-child { margin-top: 0; }
                 &:last-child { margin-bottom: 0; }
             }
@@ -285,8 +285,8 @@
     pre {
         clear: both;
         overflow: auto;
-        margin: em($unit--baseline * 1.5, $p--small) 0;
-        padding: em($unit--baseline, $p--small) em($unit--gutter, $p--small);
+        margin: em($baseline * 1.5, $p--small) 0;
+        padding: em($baseline, $p--small) em($gutter, $p--small);
         box-shadow: inset 0 1px 7px darken($black, 10);
 
         direction: ltr;
