--- a/src-templates/partials/nav.html
+++ b/src-templates/partials/nav.html
@@ -9,10 +9,10 @@
             <a href="{{ site_url 'about' }}" class="nav__link">About</a>
         </li>
         <li class="nav__item">
-            <a href="{{ site_url 'showcase' }}" class="nav__link">Portfolio</a>
+            <a href="{{ site_url 'services' }}" class="nav__link">Services</a>
         </li>
         <li class="nav__item">
-            <a href="{{ site_url 'services' }}" class="nav__link">Services</a>
+            <a href="{{ site_url 'showcase' }}" class="nav__link">Portfolio</a>
         </li>
         <li class="nav__item">
             <a href="{{ site_url 'blog' }}" class="nav__link">Blog</a>
@@ -20,25 +20,24 @@
         <li class="nav__item">
             <a href="{{ site_url 'contact' }}" class="nav__link">Contact</a>
         </li>
-        <li class="nav__item nav__item--twitter">
+        <li class="nav__item nav__item--icon nav__item--twitter">
             <a rel="me" target="_blank" title="David Bushell on Twitter" href="http://twitter.com/dbushell" class="nav__link">
-                <svg role="presentation"><use xlink:href="#svg--twitter"></use></svg>
-                @dbushell</a>
+                <svg role="presentation"><use xlink:href="{{ site_url }}assets/img/icons.svg#twitter"></use></svg>
+                <span>@dbushell</span>
+            </a>
         </li>
-        <li class="nav__item nav__item--github">
+        <li class="nav__item nav__item--icon nav__item--github">
             <a rel="me" target="_blank" title="David Bushell on GitHub" href="https://github.com/dbushell/" class="nav__link">
-                <svg role="presentation"><use xlink:href="#svg--github"></use></svg>
-                GitHub</a>
+                <svg role="presentation"><use xlink:href="{{ site_url }}assets/img/icons.svg#github"></use></svg>
+                <span>GitHub</span>
+            </a>
         </li>
-        <li class="nav__item nav__item--codepen">
+        <li class="nav__item nav__item--icon nav__item--codepen">
             <a rel="me" target="_blank" title="David Bushell on CodePen" href="http://codepen.io/dbushell/" class="nav__link">
-                <svg role="presentation"><use xlink:href="#svg--codepen"></use></svg>
-                CodePen</a>
+                <svg role="presentation"><use xlink:href="{{ site_url }}assets/img/icons.svg#codepen"></use></svg>
+                <span>CodePen</span>
+            </a>
         </li>
     </ul>
-    <a class="nav-close" id="nav-close" href="#top">
-        <svg role="presentation"><use xlink:href="#svg--close"></use></svg>
-        <span>Return to Top of Page</span>
-    </a>
 </nav>
 <!--/.nav-->
