--- a/src-assets/scss/_footer.scss
+++ b/src-assets/scss/_footer.scss
@@ -157,7 +157,7 @@
             background: url("../img/me.jpg") 0 0 no-repeat;
             background-size: 100% 100%;
             border: 3px solid $yellow;
-            box-shadow: 0 0 0 3px $green;
+            box-shadow: 0 0 0 3px $pink;
         }
 
         .lt-ie8 & {
